<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.calculoareaulceras.activitys.MainActivity" >

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelError"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error"
        android:layout_marginTop="50dp"
        android:text="@string/labelLogin" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/login"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/editTextLogin"
        android:text="@string/labelSenha" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/senha"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/senha"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSenha"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/editTextSenha"
        android:text="@string/labelEntrar" />

    <Button
        android:id="@+id/buttonCadastroUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSenha"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/buttonEntrar"
        android:text="@string/cadastro" />

</RelativeLayout>