<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.calculoareaulceras.CadastroActivity" >

     <TextView
        android:id="@+id/textViewCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewNomePaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCadastro"
        android:layout_marginTop="39dp"
        android:text="@string/labelNome" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewNomePaciente"
        android:layout_alignStart="@+id/textViewNomePaciente"
        android:layout_below="@+id/textViewNomePaciente"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNome"
        android:text="@string/labelEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewNomePaciente"
        android:layout_alignStart="@+id/textViewNomePaciente"
        android:layout_below="@+id/textViewEmail"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
      <TextView
        android:id="@+id/textViewTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:text="@string/labelTelefone" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewNomePaciente"
        android:layout_alignStart="@+id/textViewNomePaciente"
        android:layout_below="@+id/textViewTelefone"
        android:inputType="phone" >

        <requestFocus />
    </EditText>


    <View
        android:id="@+id/centerShim"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonSalvarPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/centerShim"
        android:layout_toStartOf="@+id/centerShim"
        android:text="@string/labelSalvar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSalvarPaciente"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerShim"
        android:layout_toEndOf="@+id/centerShim"
        android:text="@string/labelCancelar" />
	
</RelativeLayout>
